@@ -16,10 +16,9 @@ prog = progEx 10000000000000000
 
 progEx :: Double -> [Double] -> IO [Double]
 progEx mxDone todo = do
-    let scale = 100 -- Use scale so we can run the test faster
     let resolution = 10000 -- Use resolution to get extra detail on the numbers
     let done = scanl (+) 0 $ map (min mxDone . max 0) $ zipWith (-) todo (tail todo)
-    pile <- newIORef $ zipWith (\t d -> mempty{timeBuilt=d,timeTodo=(t*scale*resolution,0)}) todo done
+    pile <- newIORef $ tail $ zipWith (\t d -> mempty{timeBuilt=d*resolution,timeTodo=(t*resolution,0)}) todo done
     let get = do a <- readIORef pile
                  case a of
                      [] -> return mempty{isRunning=False}
@@ -29,7 +28,7 @@ progEx mxDone todo = do
     let put x = do let (mins,secs) = break (== 'm') $ takeWhile (/= '(') x
                    let f x = let y = filter isDigit x in if null y then 0/0 else read y
                    modifyIORef out (++ [(if null secs then f mins else f mins * 60 + f secs) / resolution])
-    progressDisplay (1/scale) put get
+    progressDisplayTester resolution put get
     fmap (take $ length todo) $ readIORef out
 
 
@@ -43,11 +42,11 @@ test build obj = do
     let dp3 x = fromIntegral (round $ x * 1000 :: Int) / 1000
     map dp3 (drop 2 xs) === [8,7..1]
 
-    -- The properties below this line could  be weakened
+    -- The properties below this line could be weakened
 
     -- increasing functions can't match
     xs <- prog [5,6,7]
-    last xs === 700 -- because of the scale issues
+    last xs === 7
 
     -- the first value must be plausible, or missing
     xs <- prog [187]
@@ -59,3 +58,10 @@ test build obj = do
     xs <- progEx 1 $ [10,9,100,8,7,6,5,4,3,2,1]
     assert (all (<= 1.5) $ map abs $ zipWith (-) (drop 5 xs) [6,5..1]) "Close"
 
+    -- if no progress is made, don't keep the time going up
+    xs <- prog [10,9,8,7,7,7,7,7]
+    drop 5 xs === [7,7,7]
+
+    -- if the work rate changes, should somewhat reflect that
+    xs <- prog [10,9,8,7,6.5,6,5.5,5]
+    assert (last xs > 7.1) "Some discounting (factor=0 would give 7)"
